--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Roboto', 'Noto Sans JP', sans-serif;
     margin: 0;
     background-color: var(--background-color);
     color: var(--text-color);
